--- a/BrainF__k interpreter/BrainF__k interpreter.fsproj
+++ b/BrainF__k interpreter/BrainF__k interpreter.fsproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>BrainF__k_interpreter</RootNamespace>
   </PropertyGroup>
 
@@ -10,6 +10,8 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
 
-  <ItemGroup />
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="5.0.1" />
+  </ItemGroup>
 
 </Project>
